<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:minHeight="48dp"
            android:id="@+id/rb_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once_a_week"/>
        <RadioButton
            android:minHeight="48dp"
            android:id="@+id/rb_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once_a_month" />

        <RadioButton
            android:minHeight="48dp"
            android:id="@+id/rb_half_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once_every_six_month" />

        <RadioButton
            android:minHeight="48dp"
            android:id="@+id/rb_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once_a_year"/>

        <RadioButton
            android:minHeight="48dp"
            android:id="@+id/rb_never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/never" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>