<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF">

    <LinearLayout
        android:id="@+id/contactItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="5dp"
        android:paddingHorizontal="13dp">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="@color/applogo_background"
            app:cardCornerRadius="50dp"
            android:layout_marginEnd="4dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/profile_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/tv_priority"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_contact_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="3dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/round_edit_note_24"
            android:visibility="gone" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_priority1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/contactItem">

        <RadioButton
            android:id="@+id/rb_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_half_year"
            android:button="@null"
            android:gravity="center"
            android:text="@string/week"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_half_year"
            android:button="@null"
            android:gravity="center"
            android:text="@string/month"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_half_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_half_year"
            android:button="@null"
            android:gravity="center"
            android:text="@string/half_year"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_half_year"
            android:button="@null"
            android:gravity="center"
            android:text="@string/year"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/ic_half_year"
            android:button="@null"
            android:gravity="center"
            android:text="@string/never"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactItem">

        <ImageView
            android:id="@+id/iv_whatsapp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="80dp"
            android:src="@drawable/whatsapp_logo_wine" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="-3dp"
            android:src="@drawable/baseline_call_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>